[package]
name = "switchboard-v2"
version = "0.3.1"
edition = "2021"
description = "A Rust library to interact with Switchboard V2 accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://docs.switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sbv2-solana/tree/main/rust/switchboard-v2"
license = "MIT"
documentation = "https://docs.rs/switchboard-v2/"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_v2"
doctest = false

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
rust_decimal = "=1.26.1"
bytemuck = { version = "*" }
superslice = "1"
solana-program = ">= 1.14.16, < 1.19.0"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# toml_datetime = "=0.6.1"
# winnow = "=0.4.1"
# toml_edit = "=0.19.8"
